--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,10 @@ jobs:
     - uses: actions/checkout@v3
     - name: install htslib
       run: sudo apt-get update && sudo apt-get install -y libhts-dev
+    - name: autoheader
+      run: autoheader
+    - name: autoconf
+      run: autoconf
     - name: configure
       run: ./configure
     - name: make
