--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,8 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: install htslib
-      run: sudo apt-get update && sudo apt-get install -y libhts-dev
+    - name: Checkout submodules
+      run: git clone --recurse-submodules https://github.com/samtools/htslib.git
     - name: autoheader
       run: autoheader
     - name: autoconf
