--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: install_depends
+      run: sudo apt-get install -y zlib1g-dev libbz2-dev liblzma-dev libcurl4-gnutls-dev libssl-dev 
     - name: Checkout submodules
       run: git clone --recurse-submodules https://github.com/samtools/htslib.git
     - name: autoheader
